--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
 
-<title>Small Office - Under Construction template for WordPress</title>
+<title>Strings Unlimited | A Clothing Company</title>
 
 
 
@@ -619,7 +619,8 @@
 }</style></head>
     <body>
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-<h1 class="headingl">Site under construction</h1>
+<h1 class="headingl">Site under construction<br/><br/>
+Strings Unlimited | A Clothing Company</h1>
 
 
 
